<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameInTHeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/nameHeader"
            android:text="Name"/>

        <TextView
            style="@style/Questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question6" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_buttonQ6a"
                style="@style/radio_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/Question6_a" />

            <RadioButton
                android:id="@+id/radio_buttonQ6b"
                style="@style/radio_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Question6_b" />

        </RadioGroup>



    </LinearLayout>



</FrameLayout>
